[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Chaeyoon/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Chaeyoon/Health.gd" type="Script" id=3]
[ext_resource path="res://Chaeyoon/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Chaeyoon/Level1.gd" type="Script" id=5]
[ext_resource path="res://Chaeyoon/Health_item.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300.359, 31.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 514, 33.5 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 116, 501 )

[node name="Sprite" type="Sprite" parent="Floor"]
position = Vector2( 238, 0 )
scale = Vector2( 9.3125, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 239, -0.75 )
shape = SubResource( 1 )

[node name="Floor2" type="StaticBody2D" parent="."]
position = Vector2( 575, 330 )

[node name="Sprite" type="Sprite" parent="Floor2"]
position = Vector2( 238, 0 )
scale = Vector2( 9.3125, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2"]
position = Vector2( 235.359, -0.75 )
shape = SubResource( 1 )

[node name="Floor3" type="StaticBody2D" parent="."]
position = Vector2( 718, 161 )

[node name="Sprite" type="Sprite" parent="Floor3"]
position = Vector2( 238, 0 )
scale = Vector2( 9.3125, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor3"]
position = Vector2( 238, -1 )
shape = SubResource( 1 )

[node name="Floor4" type="StaticBody2D" parent="."]
position = Vector2( -229, 230 )

[node name="Sprite" type="Sprite" parent="Floor4"]
position = Vector2( 238, 0 )
scale = Vector2( 9.3125, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor4"]
position = Vector2( 236.281, 0 )
shape = SubResource( 1 )

[node name="Floor5" type="StaticBody2D" parent="."]
position = Vector2( 59, -34 )

[node name="Sprite" type="Sprite" parent="Floor5"]
position = Vector2( 459, 0 )
scale = Vector2( 16, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor5"]
position = Vector2( 458, -2 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor5"]
position = Vector2( 455, 663 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

[node name="HealthBarTest" type="Node" parent="."]

[node name="Health" type="Node" parent="HealthBarTest"]
process_priority = 3
script = ExtResource( 3 )
max_amount = 28

[node name="HealthBar" parent="HealthBarTest" instance=ExtResource( 4 )]

[node name="Health_item" parent="." instance=ExtResource( 6 )]
position = Vector2( 552, 240 )

[node name="Health_item2" parent="." instance=ExtResource( 6 )]
position = Vector2( 688, 64 )

[node name="Health_item3" parent="." instance=ExtResource( 6 )]
position = Vector2( 256, 416 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 232, 80 )
__meta__ = {
"_edit_group_": true
}

[connection signal="changed" from="HealthBarTest/Health" to="HealthBarTest/HealthBar" method="set_value"]
[connection signal="max_changed" from="HealthBarTest/Health" to="HealthBarTest/HealthBar" method="set_max"]
